--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.2</version>
                 <configuration>
-                    <mainClass>application.MultipleViews</mainClass>
+                    <mainClass>main.GameStart</mainClass>
                 </configuration>
             </plugin>
         </plugins>
